nginx-deployment/manifest-public-cloudflare.yaml
# Apply this manifest with: kubectl apply -f nginx-deployment/manifest-cloudflare.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cloudflare
  labels:
    app: nginx-cloudflare
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-cloudflare
  template:
    metadata:
      labels:
        app: nginx-cloudflare
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cloudflare
  labels:
    app: nginx-cloudflare
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-cloudflare
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-cloudflare-ingress
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: nginx.mlops-club.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-cloudflare
            port:
              number: 80
